--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
       <nav class="flex items-center gap-6 text-sm">
         <a href="#menu" class="text-white hover:text-[#FF4E00] transition font-medium">Menú</a>
         <a href="#ubicaciones" class="text-white hover:text-[#FF4E00] transition font-medium">Ubicaciones</a>
+        <a href="#Reseñas" class="text-white hover:text-[#FF4E00] transition font-medium">Reseñas</a>
+        <a href="#Sobre-Nosotros" class="text-white hover:text-[#FF4E00] transition font-medium">Sobre Nosotros</a>
         <a href="#contacto" class="text-white hover:text-[#FF4E00] transition font-medium">Contacto</a>
         <a href="https://wa.me/593991234567" target="_blank" class="ml-4 bg-[#FF4E00] text-white font-bold px-4 py-2 rounded-full text-sm hover:bg-white hover:text-[#1a1a1a] transition">Ordenar</a>
       </nav>
@@ -384,7 +386,50 @@
           </aside>
         </div>
       </section>
+
+      <section id="contacto" class="py-12 px-4 bg-[#1a1a1a] text-white">
+        <h2 class="text-3xl font-extrabold text-[#FF4E00] text-center mb-8">Contáctanos</h2>
+
+        <form id="formulario-rukito" class="max-w-xl mx-auto bg-[#2c2c2c] p-6 rounded-xl shadow-lg space-y-6">
+          <div>
+            <label for="nombre" class="block text-sm font-bold mb-2">Tu Nombre</label>
+            <input id="nombre" type="text" required placeholder="Ingresa tu nombre" class="w-full px-4 py-2 rounded bg-[#1a1a1a] text-white border border-[#FF4E00] focus:outline-none focus:ring-2 focus:ring-[#FF4E00]" />
+          </div>
+
+          <div>
+            <label for="tipo" class="block text-sm font-bold mb-2">Tipo de Consulta</label>
+            <select id="tipo" required class="w-full px-4 py-2 rounded bg-[#1a1a1a] text-white border border-[#FF4E00] focus:outline-none focus:ring-2 focus:ring-[#FF4E00]">
+              <option value="">Selecciona una opción</option>
+              <option value="pedido">Pedido</option>
+              <option value="reclamo">Reclamo</option>
+              <option value="sugerencia">Sugerencia</option>
+            </select>
+          </div>
+
+          <div>
+            <label for="mensaje" class="block text-sm font-bold mb-2">Mensaje</label>
+            <textarea id="mensaje" rows="4" required placeholder="Escribe tu mensaje aquí..." class="w-full px-4 py-2 rounded bg-[#1a1a1a] text-white border border-[#FF4E00] focus:outline-none focus:ring-2 focus:ring-[#FF4E00]"></textarea>
+          </div>
+
+          <button type="submit" class="bg-[#FF4E00] text-white px-6 py-2 rounded-full font-bold hover:bg-white hover:text-[#1a1a1a] transition">
+            Enviar
+          </button>
+        </form>
+
+        <!-- Vista interactiva -->
+        <div id="respuesta-formulario" class="mt-8 max-w-xl mx-auto bg-[#1a1a1a] border border-[#FF4E00] p-6 rounded-xl hidden">
+          <h3 class="text-xl font-bold mb-4 text-[#FF4E00]">Tu mensaje ha sido enviado</h3>
+          <p><strong>Nombre:</strong> <span id="rta-nombre"></span></p>
+          <p><strong>Tipo:</strong> <span id="rta-tipo"></span></p>
+          <p><strong>Mensaje:</strong> <span id="rta-mensaje"></span></p>
+        </div>
+
+      </section>
+
     </main>
+
+
+
 
     <footer class="flex justify-center">
       <div class="flex max-w-[960px] flex-1 flex-col">
@@ -426,10 +471,10 @@
         </footer>
       </div>
     </footer>
-
   </body>
   <script type="module" src="src/js/file01.js"></script>
   <script src="src/js/toggle.js"></script>
+  <script src="src/js/form.js"></script>
   <style>
     .scrollbar-hide::-webkit-scrollbar {
       display: none;
