--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1 class="text-white text-xl font-black tracking-tight">RUKITO</h1>
       </div>
       <nav class="flex items-center gap-6 text-sm">
-        <a href="#menu" class="text-white hover:text-[#FF4E00] transition font-medium">Menú</a>
+        <a href="#tiktokCarousel" class="text-white hover:text-[#FF4E00] transition font-medium">Menú</a>
         <a href="#ubicaciones" class="text-white hover:text-[#FF4E00] transition font-medium">Ubicaciones</a>
         <a href="#Reseñas" class="text-white hover:text-[#FF4E00] transition font-medium">Reseñas</a>
         <a href="#Sobre-Nosotros" class="text-white hover:text-[#FF4E00] transition font-medium">Sobre Nosotros</a>
@@ -42,7 +42,7 @@
       </div>
     </section>
 
-    <main class="w-full max-w-6xl mx-auto px-4 py-12">
+    <main class="w-full max-w-6xl mx-auto px-4 py-12" id="menu">
       <!-- Toast container -->
       <div id="toast-backdrop" class="fixed top-0 left-0 w-full h-full bg-black/50 z-40 hidden flex items-center justify-center">
         <div id="toast" class="bg-[#2c2c2c] text-white rounded-md shadow-lg flex flex-col md:flex-row max-w-6xl w-5/6 mx-auto h-[80vh]">
@@ -152,7 +152,7 @@
       </section>
       
       
-      <section class="w-full px-4 py-8">
+      <section class="w-full px-4 py-8" id="Reseñas">
         <div class="flex flex-col md:flex-row gap-8">
           <!-- Reseñas -->
           <div class="flex flex-col gap-6 md:w-3/4 order-1">
@@ -377,7 +377,7 @@
             </div> 
           </div>
           <!-- About Us -->
-          <aside class="flex flex-col gap-4 md:w-1/3 order-2">
+          <aside class="flex flex-col gap-4 md:w-1/3 order-2" id="Sobre-Nosotros">
             <h2 class="text-2xl font-bold text-white mb-4">Sobre Nosotros</h2>
             <img src="src/img/rukito-logo.jpeg" alt="Imagen de Rukito" class="w-full h-52 object-cover rounded-lg shadow-lg mb-4" />
             <p class="text-white text-base leading-relaxed">
