Corrección de archivos VITE

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div id="toast-backdrop" class="fixed top-0 left-0 w-full h-full bg-black/50 z-40 hidden flex items-center justify-center">
         <div id="toast" class="bg-[#2c2c2c] text-white rounded-md shadow-lg flex flex-col md:flex-row max-w-6xl w-5/6 mx-auto h-[80vh]">
           <div class="md:w-1/2">
-            <img id="toast-image" src="src/img/promo-example.png" alt="Promotion" class="w-full h-full object-cover rounded-tl-md rounded-bl-md md:rounded-bl-none md:rounded-tl-md">
+            <img id="toast-image" src="src/img/promo3.png" alt="Promotion" class="w-full h-full object-cover rounded-tl-md rounded-bl-md md:rounded-bl-none md:rounded-tl-md">
           </div>
           <div class="p-8 md:w-1/2 flex flex-col">
             <div id="toast-limited-time" class="bg-[#FF4E00]/80 text-white text-xs py-1 px-2 rounded-md flex items-center gap-1 mb-4">
@@ -188,9 +188,9 @@
       </div>
     </footer>
   </body>
-  <script type="module" src="src/js/file01.js"></script>
-  <script src="src/js/toggle.js"></script>
-  <script src="src/js/reviews.js"></script>
+  <script type="module" src="public/src/js/file01.js"></script>
+  <script type="module" src="public/src/js/toggle.js"></script>
+  <script type="module" src="public/src/js/reviews.js"></script>
   <style>
     .scrollbar-hide::-webkit-scrollbar {
       display: none;
