--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
     </footer>
   </body>
   <script type="module" src="public/src/js/file01.js"></script>
-  <script type="module" src="public/src/js/toggle.js"></script>
   <script type="module" src="public/src/js/reviews.js"></script>
+  <script src="public/src/js/toggle.js"></script>
   <style>
     .scrollbar-hide::-webkit-scrollbar {
       display: none;
